<resources>
    <string name="app_name">PanicBuy</string>
    <string name="textview">TextView</string>
    <string name="first_name">First Name</string>
    <string name="Result">Result</string>
    <string name="barcode">Barcode</string>
    <string name="upda">UP</string>
    <string name="listLine">listLine</string>
    <string name="barcodeResult">barcode</string>
    <string name="stock">Stock</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="secondActivity">SecondActivity</string>
    <string name="text_header">HEADER</string>
    <string name="chip">CHIP</string>
    <string name="fish">FISH</string>
    <string name="list">List</string>
    <string name="def">Def</string>
    <string name="shop">Shop</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="signin">SIGNIN</string>
    <string name="tagname">tag name</string>
    <string name="unknown">Unknown</string>
    <string name="dotdotdot">...</string>
    <string name="qty">Qty</string>
    <string name="one">1</string>
    <string name="raw">RAW</string>
    <string name="sql">SQL</string>
    <string name="csv">CSV</string>
    <string name="New_Item">New Item</string>
    <string name="material_switch">Shopping</string>
    <string name="panicbuy">PanicBuy!</string>
    <string name="equals">=</string>
    <string name="uploadFile">Upload</string>
    <string name="trolly">🛒</string>
    <string name="qtytobuy">Qty to Buy</string>


</resources>