<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/toolbar_layout" />


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">


        <TextView

            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:text="Export your database"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


        <TableRow android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button_db"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="downloadFile"
                android:text="@string/raw" />

            <TextView

                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"

                android:text="Dump database to disc. You can load it into SQLLite for the desktop."
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button_sql"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="downloadFile"
                android:text="@string/sql" />

            <TextView
                android:id="@+id/textViewSQL"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:text="Dump database to disc. You can load it into other
            databases"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        </TableRow>

        <TableRow android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button_csv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="downloadFile"
                android:text="@string/csv" />

            <TextView
                android:id="@+id/textViewCSV"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:text="Dump database to disc. You can load it into Excel."
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </TableRow>

        <TextView
            android:id="@+id/textViewRaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:padding="30dp"
            android:text="File is saved in Downloads"

            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


        <TableRow android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectFile"
                android:text="@string/uploadFile" />

            <TextView

                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:text="Upload an sqlLite database"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />



        </TableRow>





    </TableLayout>




</androidx.appcompat.widget.LinearLayoutCompat>