<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:backgroundTint="@color/teal_200"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/myLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_surface"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout" />



<!--        <LinearLayout
            android:id="@+id/chipshop2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp">

                <com.google.android.material.chip.Chip
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:text="SHOP"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:chipBackgroundColor="@color/teal_700" />

                <com.google.android.material.chip.Chip
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="SHOP"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:chipBackgroundColor="@color/orange" />

                <com.google.android.material.chip.Chip
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="SHOP"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:chipBackgroundColor="@color/orange" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout> -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/button_s"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:onClick="actionButton"
                android:src="@drawable/scan"
                android:visibility="gone" />

            <EditText
                android:id="@+id/barcodeResultView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/barcodeResult"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_c"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:onClick="actionButton"
                android:text="C" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/New_Item"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/second_a"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"

                android:onClick="launchSecondActivity"
                android:text="@string/dotdotdot" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/qty"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/button_m"
                android:layout_width="60dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="10dp"
                android:onClick="actionButton"
                android:text="@string/minus" />

            <EditText
                android:id="@+id/editTextQty"
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:inputType="number"

                android:text="@string/one"

                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            `

            <Button
                android:id="@+id/button_p"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:onClick="actionButton"
                android:text="@string/plus" />`

            <TextView
                android:id="@+id/textViewStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/equals"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textViewStockLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <ImageButton
                android:id="@+id/button_u"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:onClick="actionButton"
                android:scaleX="-1"
                android:src="@drawable/baseline_thumb_up_48"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/orangeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/counting"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="-10dp"
                    android:checked="true"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:text="SHELF" /> <!-- displayed text of radio button-->
                <RadioButton
                    android:id="@+id/shopping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="-10dp"
                    android:layout_marginRight="30dp"
                    android:checked="false"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:text="SHOP" /> <!-- displayed text of radio button-->
            </RadioGroup>


            <ImageButton
                android:id="@+id/button_tobuy"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:onClick="actionButton"

                android:src="@drawable/baseline_shopping_cart_48"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/button_d"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:onClick="actionButton"
                android:src="@drawable/baseline_delete_48"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/chipshop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"></com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/purpleLayout"
            android:layout_width="wrap_content"
            android:layout_height="368dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"

            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orangeLayout">

            <ListView
                android:id="@+id/stocklist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTintMode="screen"></ListView>

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>



























